--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,7 +30,9 @@ jobs:
         with:
           java-version: '23'
           distribution: 'temurin'
-          cache: maven
+          server-id: github
+          server-username: github.actor
+          server-password: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Build the project
         run: mvn clean install
