--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,14 +25,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 21
+      - name: Set up JDK 23
         uses: actions/setup-java@v3
         with:
           java-version: '23'
           distribution: 'temurin'
           server-id: github
           server-username: github.actor
-          server-password: ${{ secrets.GITHUB_TOKEN }}
+          server-password: ${{ secrets.starters-token }}
           
       - name: Build the project
         run: mvn clean install
