--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,25 +18,48 @@ jobs:
     services:
       db:
         image: mysql
-        restart: always
-        environment:
+        env:
           MYSQL_ROOT_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 3306:3306
 
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 23
         uses: actions/setup-java@v3
         with:
-          java-version: '23'
           distribution: 'temurin'
-          cache: maven
-      - name: Shutdown Ubuntu MySQL (SUDO)
-        run: sudo service mysql stop
+          java-version: '23'
+          server-id: github
+          settings-path: ${{ github.workspace }}
+
+      - name: Configure GitHub Packages Authentication
+        run: |
+          echo "<settings>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>${{ github.actor }}</username>
+                <password>${{ secrets.GITHUB_TOKEN }}</password>
+              </server>
+            </servers>
+          </settings>" > $HOME/.m2/settings.xml
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Build the project
         run: mvn clean install
+
+      - name: Package Application
+        run: mvn package -DskipTests
 
       - name: Persist workflow data as artifact
         run: mkdir staging && cp target/*.jar staging
