--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Configure GitHub Packages Authentication
         run: |
+          mkdir -p $HOME/.m2
           echo "<settings>
             <servers>
               <server>
