--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,16 @@
 	<properties>
 		<java.version>23</java.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>github</id>
+			<url>https://maven.pkg.github.com/Kaisar283/custom-data-jpa-spring-boot-starter</url>
+		</repository>
+		<repository>
+			<id>github2</id>
+			<url>https://maven.pkg.github.com/Kaisar283/map-db-spring-boot-starter</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
