--- a/.github/workflows/build&publish_docker_image.yaml
+++ b/.github/workflows/build&publish_docker_image.yaml
@@ -50,11 +50,11 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push Docker image for customer service
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./hotel-app
-          file: ./hotel-app/Dockerfile
+          context: .
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
