fix: add pull_request file in workflow

--- a/.github/workflows/build&publish_docker_image.yaml
+++ b/.github/workflows/build&publish_docker_image.yaml
@@ -3,6 +3,9 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['main']
+  pull_request:
+    types: [ opened, reopened ]
+    branches: [ 'main' ]
 
 env:
   REGISTRY: ghcr.io
