--- a/.github/workflows/build&publish_docker_image.yaml
+++ b/.github/workflows/build&publish_docker_image.yaml
@@ -37,6 +37,27 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
+      - name: Configure GitHub Packages Authentication
+        run: |
+          mkdir -p $HOME/.m2
+          echo "<settings>
+            <servers>
+              <server>
+                <id>github</id>
+                <username>${{ github.actor }}</username>
+                <password>${{ secrets.GITHUB_TOKEN }}</password>
+              </server>
+            </servers>
+          </settings>" > $HOME/.m2/settings.xml
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
       - name: Build with Maven
         run: mvn clean package
 
